--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -64,6 +64,7 @@ nav {
 
 .nav__links {
   width: 50%;
+  max-width: 550px;
   display: flex;
   justify-content: space-around;
 }
@@ -199,4 +200,69 @@ nav {
     width: 60%;  
   }
 
+}
+
+/* #################################
+------------ Footer ---------------
+################################# */
+.footer {
+  width: 100%;
+  min-height: 30vh;
+  margin-top: 10vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #343a40;
+  color: #f8f9fa;
+}
+.footer__detailsContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 30px 0;
+}
+.footer__details {
+  width: 30%;
+}
+.footer__details h4 {
+  font-size: 14px;
+  margin-bottom: 15px;
+  opacity: 0.7;
+}
+.footer__details ul li {
+  list-style: none;
+  margin-bottom: 5px;
+}
+.footer__details p {
+  font-size: 14px;
+  color: #f8f9fa;
+  opacity: 0.7;
+}
+
+.footer__bottom {
+  width: 100%;
+}
+
+.footer__bottom p {
+  color: #f8f9fa !important;
+  opacity: 0.5;
+  text-align: center;
+  font-size: 14px;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__details {
+    width: 40%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .footer__details {
+    width: 80%;
+    align-self: center;
+  }
+  .footer__detailsContainer {
+   flex-direction: column;
+  }
 }
