--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -62,7 +62,8 @@
   height: auto;
 }
 
-.index__sectionTextContainer {
+.index__sectionTextContainer h2,
+.index__sectionTextContainer p {
   padding: 25px 20px 0 40px;
 }
 
@@ -70,7 +71,6 @@
   font-size: 2rem;
   font-weight: 400;
   text-decoration: underline;
-  margin-bottom: 1.5rem;
 }
 
 @media screen and (max-width: 1024px) {
@@ -82,9 +82,6 @@
   }
   .index__sections {
     margin-bottom: 5vh;
-  }
-  .index__sectionTextContainer {
-    padding: 10px 20px 0 30px;
   }
   .index__sectionTextContainer h2 {
     font-size: 1.5rem;
@@ -109,5 +106,56 @@
   .index__sectionTextContainer h2,
   .index__sectionTextContainer p {
     padding: 0 20px;
+  }
+}
+
+/* #################################
+---------- Subscription form ------
+################################# */
+.index__formComtainer {
+  height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.index__formComtainer h4 {
+  font-weight: 300;
+  font-size: 2rem;
+  opacity: 0.7;
+  margin-bottom: 20px;
+  text-align: center;
+  padding: 0 10px;
+}
+
+.index__form input {
+  width: 40vw;
+  height: 35px;
+  font-size: 18px;
+  opacity: 0.7;
+}
+.index__form button {
+  width: 140px;
+  height: 38px;
+  font-size: 18px;
+  border: none;
+  background-color: rgb(40, 65, 207);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .index__form input {
+    display: flex;
+    flex-direction: column;
+  }
+  .index__form input {
+    width: 65vw;
+    min-width: 300px;
+  }
+  .index__form button {
+    margin-top: 10px;
   }
 }
