--- a/src/styles/exhibition.css
+++ b/src/styles/exhibition.css
@@ -1,4 +1,67 @@
 .exhibition__header {
-  background-image: url('./../images_csm/exhibition_spaces.jpg');
+  background-image: url("./../images_csm/exhibition_spaces.jpg");
   /* Image source: Community Science Museum */
+}
+
+.exhibition__main {
+  width: 90vw;
+}
+
+.exhibition__sections {
+  display: flex;
+  background-color: #eceef5;
+  margin-bottom: 10vh;
+}
+.exhibition__sections:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+.exhibition__sections img {
+  width: 50%;
+  height: auto;
+}
+
+.exhibition__textContainer {
+  margin: 20px 40px 0 40px;
+}
+
+.exhibition__sections h2 {
+  font-size: 2rem;
+  margin-bottom: 15px;
+  opacity: 0.8;
+}
+
+.exhibition__sections p {
+  opacity: 0.8;
+  margin-bottom: 15px;
+}
+
+@media screen and (max-width: 1112px) {
+  .exhibition__main {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .exhibition__sections {
+    width: 75%;
+    flex-direction: column !important;
+  }
+  .exhibition__sections img {
+    width: 100%;
+    height: auto;
+  }
+  .exhibition__textContainer {
+    margin: 20px 40px 70px 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .exhibition__sections {
+    width: 90%;
+    margin-bottom: 5vh;
+    background-color: inherit;
+  }
+  .exhibition__textContainer {
+    margin: 20px 0px 20px 0px;
+  }
 }
