--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -37,7 +37,7 @@
 
 .index__subHeader {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 5vh;
   font-weight: 400;
   font-size: 2.5rem;
 }
