--- a/src/styles/joinus.css
+++ b/src/styles/joinus.css
@@ -1,4 +1,79 @@
 .joinus__header {
-  background-image: url('./../images_csm/william-bout-264826.jpg');
+  background-image: url("./../images_csm/william-bout-264826.jpg");
   /* Image source: Community Science Museum, author: William Bout */
+}
+
+.joinus__main {
+  width: 90vw;
+}
+
+.joinus__sections {
+  display: flex;
+  background-color: #eceef5;
+  margin-bottom: 7vh;
+}
+.joinus__sections:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+.joinus__sections img {
+  width: 50%;
+  height: auto;
+}
+
+.joinus__textContainer {
+  margin: 20px 40px 0 40px;
+}
+
+.joinus__sections h2 {
+  font-size: 2rem;
+  margin-bottom: 15px;
+  opacity: 0.8;
+}
+
+.joinus__sections p {
+  opacity: 0.8;
+  margin-bottom: 15px;
+}
+.joinus__subHeader {
+  width: 100%;
+  margin: 12vh 0 3vh 0;
+  font-weight: 400;
+  font-size: 2.5rem;
+}
+
+@media screen and (max-width: 1112px) {
+  .joinus__main {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .joinus__sections {
+    width: 75%;
+    flex-direction: column !important;
+  }
+  .joinus__sections img {
+    width: 100%;
+    height: auto;
+  }
+  .joinus__textContainer {
+    margin: 20px 40px 70px 40px;
+  }
+  .joinus__subHeader {
+    margin: 10vh 0 3vh 25vw;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .joinus__sections {
+    width: 90%;
+    margin-bottom: 5vh;
+    background-color: inherit;
+  }
+  .joinus__textContainer {
+    margin: 20px 0px 20px 0px;
+  }
+  .joinus__subHeader {
+    margin: 5vh 0 3vh 10vw;
+  }
 }
