--- a/src/styles/globalStyles.css
+++ b/src/styles/globalStyles.css
@@ -49,6 +49,7 @@ header h1 {
   text-transform: uppercase;
   font-size: 4rem;
   margin: 0 10px;
+  letter-spacing: 2px;
 }
 @media (max-width: 767px) {
   header h1 {
